Game, Main and PlayWindow sketches

--- a/IPY_proj/PlayWindow.xaml
+++ b/IPY_proj/PlayWindow.xaml
@@ -5,7 +5,7 @@
         ScrollViewer.VerticalScrollBarVisibility="Visible" Closing="Window_Closing">
 
     <ScrollViewer>
-        <Grid Name="MainGrid" Background="#FFFBFF9A" >
+        <Grid x:Name="MainGrid" Background="#FFFBFF9A" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -19,20 +19,20 @@
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <!-- Текущая карточка -->
-            <Label Name="LBL_Current_card"
+            <Label x:Name="LBL_Current_card"
             Grid.Row="0" Grid.Column="0"  Grid.ColumnSpan="2" 
                HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                BorderThickness="3" BorderBrush="Black" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="36" 
                MinWidth="100" Background="Khaki">
                 12
             </Label>
-            <Label Name="player1_Name" 
+            <Label x:Name="player1_Name" 
                    Grid.Row="1" Grid.Column="0"
                    VerticalContentAlignment="Center" HorizontalContentAlignment="Center" 
                    FontFamily="TruthCYR Regular" FontSize="14">
                 Первый игрок
             </Label>
-            <Label Name="player2_Name"
+            <Label x:Name="player2_Name"
                    Grid.Row="1" Grid.Column="1"
                    VerticalContentAlignment="Center" HorizontalContentAlignment="Center" 
                    FontFamily="TruthCYR Regular" FontSize="14">
@@ -40,7 +40,7 @@
             </Label>
             <!-- Поле для первого игрока (слева) -->
 
-            <Grid Name="First_player_field" Grid.Row="2" Grid.Column="0"
+            <Grid x:Name="first_player_field" Grid.Row="2" Grid.Column="0"
               VerticalAlignment="Center" HorizontalAlignment="Center"
               MinHeight="250" MinWidth="250"
               Margin="8,8">
@@ -60,7 +60,7 @@
                 </Grid.ColumnDefinitions>
             </Grid>
             <!-- Поле для второго игрока (справа) -->
-            <Grid Name="Second_player_field" Grid.Row="2" Grid.Column="1"
+            <Grid x:Name="second_player_field" Grid.Row="2" Grid.Column="1"
               VerticalAlignment="Center" HorizontalAlignment="Center"
               MinHeight="250" MinWidth="250" Margin="8">
                 <Grid.RowDefinitions>
@@ -79,11 +79,11 @@
                 </Grid.ColumnDefinitions>
             </Grid>
             <!-- Кнопки "Вписать" -->
-            <Button Name="BTTN_OK_1" Grid.Row="3" Grid.Column="0" 
+            <Button x:Name="BTTN_OK_1" Grid.Row="3" Grid.Column="0" 
                 BorderBrush="Gray" BorderThickness="2" Click="BTTN_OK_1_Click">
                 Вписать
             </Button>
-            <Button Name="BTTN_OK_2" Grid.Row="3" Grid.Column="1" 
+            <Button x:Name="BTTN_OK_2" Grid.Row="3" Grid.Column="1" 
                     HorizontalAlignment="Center" Margin="150.2,0,149.8,3.8" 
                 FontSize="14" FontWeight="Bold" Padding="4,2" VerticalAlignment="Bottom" Click="BTTN_OK_2_Click">
                 Вписать
