--- a/IPY_proj/NotificationWindow.xaml
+++ b/IPY_proj/NotificationWindow.xaml
@@ -6,11 +6,11 @@
     </Window.Resources>
     <ScrollViewer>
         <StackPanel VerticalAlignment="Center">
-            <TextBlock Name="Congratulation" HorizontalAlignment="Center" FontSize="20" 
+            <TextBlock x:Name="congratulation" HorizontalAlignment="Center" FontSize="20" 
                        FontFamily="Segoe UI Black" TextWrapping="Wrap"> 
                 Вы выиграли!!
             </TextBlock>
-            <Grid Name="ScoresTable" Margin="5,10,5,5">
+            <Grid x:Name="ScoresTable" Margin="5,10,5,5">
                 <Grid.RowDefinitions>
                     <RowDefinition MinHeight="35" Height="*"></RowDefinition>
                     <RowDefinition MinHeight="30"></RowDefinition>
@@ -88,114 +88,114 @@
                            VerticalAlignment="Center" FontFamily="Segoe UI Black" Margin="0,3">
                 Сумма
                 </TextBlock>
-                <TextBlock Name="Pl1_2EqNums" Grid.Row="1" Grid.Column="1" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl1_2EqNums" Grid.Row="1" Grid.Column="1" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <TextBlock.Foreground>
                         <SolidColorBrush Color="{DynamicResource MyBrown}"/>
                     </TextBlock.Foreground>
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl1_2PairsOfEqNums" Grid.Row="2" Grid.Column="1" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl1_2PairsOfEqNums" Grid.Row="2" Grid.Column="1" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">                    
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl1_3EqNums" Grid.Row="3" Grid.Column="1" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl1_3EqNums" Grid.Row="3" Grid.Column="1" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <TextBlock.Foreground>
                         <SolidColorBrush Color="{DynamicResource MyBrown}"/>
                     </TextBlock.Foreground>
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl1_5ConsecutiveNums" Grid.Row="4" Grid.Column="1" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl1_5ConsecutiveNums" Grid.Row="4" Grid.Column="1" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">                    
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl1_3plus2EqNums" Grid.Row="5" Grid.Column="1" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl1_3plus2EqNums" Grid.Row="5" Grid.Column="1" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <TextBlock.Foreground>
                         <SolidColorBrush Color="{DynamicResource MyBrown}"/>
                     </TextBlock.Foreground>
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl1_Three_1_Two_13" Grid.Row="6" Grid.Column="1" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl1_Three_1_Two_13" Grid.Row="6" Grid.Column="1" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">                    
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl1_1_10_11_12_13" Grid.Row="7" Grid.Column="1" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl1_1_10_11_12_13" Grid.Row="7" Grid.Column="1" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <TextBlock.Foreground>
                         <SolidColorBrush Color="{DynamicResource MyBrown}"/>
                     </TextBlock.Foreground>
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl1_4EqNums" Grid.Row="8" Grid.Column="1" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl1_4EqNums" Grid.Row="8" Grid.Column="1" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">                    
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl1_4Ones" Grid.Row="9" Grid.Column="1" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl1_4Ones" Grid.Row="9" Grid.Column="1" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <TextBlock.Foreground>
                         <SolidColorBrush Color="{DynamicResource MyBrown}"/>
                     </TextBlock.Foreground>
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl1_Sum" Grid.Row="10" Grid.Column="1" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl1_Sum" Grid.Row="10" Grid.Column="1" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Black" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     100 очков
                 </TextBlock>
                  <!--Очки для второго игрока--> 
-                <TextBlock Name="Pl2_2EqNums" Grid.Row="1" Grid.Column="2" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl2_2EqNums" Grid.Row="1" Grid.Column="2" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <TextBlock.Foreground>
                         <SolidColorBrush Color="{DynamicResource MyBrown}"/>
                     </TextBlock.Foreground>
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl2_2PairsOfEqNums" Grid.Row="2" Grid.Column="2" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl2_2PairsOfEqNums" Grid.Row="2" Grid.Column="2" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">                    
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl2_3EqNums" Grid.Row="3" Grid.Column="2" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl2_3EqNums" Grid.Row="3" Grid.Column="2" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <TextBlock.Foreground>
                         <SolidColorBrush Color="{DynamicResource MyBrown}"/>
                     </TextBlock.Foreground>
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl2_5ConsecutiveNums" Grid.Row="4" Grid.Column="2" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl2_5ConsecutiveNums" Grid.Row="4" Grid.Column="2" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">                    
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl2_3plus2EqNums" Grid.Row="5" Grid.Column="2" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl2_3plus2EqNums" Grid.Row="5" Grid.Column="2" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <TextBlock.Foreground>
                         <SolidColorBrush Color="{DynamicResource MyBrown}"/>
                     </TextBlock.Foreground>
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl2_Three_1_Two_13" Grid.Row="6" Grid.Column="2" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl2_Three_1_Two_13" Grid.Row="6" Grid.Column="2" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">                    
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl2_1_10_11_12_13" Grid.Row="7" Grid.Column="2" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl2_1_10_11_12_13" Grid.Row="7" Grid.Column="2" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <TextBlock.Foreground>
                         <SolidColorBrush Color="{DynamicResource MyBrown}"/>
                     </TextBlock.Foreground>
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl2_4EqNums" Grid.Row="8" Grid.Column="2" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl2_4EqNums" Grid.Row="8" Grid.Column="2" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">                    
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl2_4Ones" Grid.Row="9" Grid.Column="2" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl2_4Ones" Grid.Row="9" Grid.Column="2" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Semibold" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <TextBlock.Foreground>
                         <SolidColorBrush Color="{DynamicResource MyBrown}"/>
                     </TextBlock.Foreground>
                     +20 (1 в стр./стб.) + 60 (2 по диаг.)
                 </TextBlock>
-                <TextBlock Name="Pl2_Sum" Grid.Row="10" Grid.Column="2" TextWrapping="Wrap" 
+                <TextBlock x:Name="Pl2_Sum" Grid.Row="10" Grid.Column="2" TextWrapping="Wrap" 
                            FontFamily="Segoe UI Black" Margin="2,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     100 очков
                 </TextBlock>
