--- a/IPY_proj/PlayWindow.xaml
+++ b/IPY_proj/PlayWindow.xaml
@@ -1,9 +1,9 @@
-<Window x:Class="Математико.PlayWindow"
+п»ї<Window 
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Математико" MinHeight="450" MinWidth="525" 
+        Title="РњР°С‚РµРјР°С‚РёРєРѕ: РґРІР° РёРіСЂРѕРєР°" MinHeight="450" MinWidth="525" 
         ScrollViewer.HorizontalScrollBarVisibility="Visible"
-        ScrollViewer.VerticalScrollBarVisibility="Visible" Closing="Window_Closing">
+        ScrollViewer.VerticalScrollBarVisibility="Visible">
 
     <ScrollViewer>
         <Grid x:Name="MainGrid" Background="#FFFBFF9A">
@@ -19,7 +19,7 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-             Текущая карточка 
+            <!-- РўРµРєСѓС‰Р°СЏ РєР°СЂС‚РѕС‡РєР° -->
             <Label x:Name="LBL_Current_card"
             Grid.Row="0" Grid.Column="0"  Grid.ColumnSpan="2" 
                HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
@@ -31,15 +31,15 @@
                    Grid.Row="1" Grid.Column="0"
                    VerticalContentAlignment="Center" HorizontalContentAlignment="Center" 
                    FontFamily="TruthCYR Regular" FontSize="14">
-                Первый игрок
+                РџРµСЂРІС‹Р№ РёРіСЂРѕРє
             </Label>
             <Label x:Name="player2_Name"
                    Grid.Row="1" Grid.Column="1"
                    VerticalContentAlignment="Center" HorizontalContentAlignment="Center" 
                    FontFamily="TruthCYR Regular" FontSize="14">
-                Второй игрок
+                Р’С‚РѕСЂРѕР№ РёРіСЂРѕРє
             </Label>
-             Поле для первого игрока (слева) 
+            <!-- РџРѕР»Рµ РґР»СЏ РїРµСЂРІРѕРіРѕ РёРіСЂРѕРєР° (СЃР»РµРІР°) -->
 
             <Grid x:Name="first_player_field" Grid.Row="2" Grid.Column="0"
               VerticalAlignment="Center" HorizontalAlignment="Center"
@@ -60,7 +60,7 @@
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
             </Grid>
-             Поле для второго игрока (справа) 
+            <!-- РџРѕР»Рµ РґР»СЏ РІС‚РѕСЂРѕРіРѕ РёРіСЂРѕРєР° (СЃРїСЂР°РІР°) -->
             <Grid x:Name="second_player_field" Grid.Row="2" Grid.Column="1"
               VerticalAlignment="Center" HorizontalAlignment="Center"
               MinHeight="250" MinWidth="250" Margin="8">
@@ -79,17 +79,17 @@
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
             </Grid>
-             Кнопки "Вписать" 
+            <!-- РљРЅРѕРїРєРё "Р’РїРёСЃР°С‚СЊ" -->
             <Button x:Name="BTTN_OK_1" Grid.Row="3" Grid.Column="0" 
                 BorderBrush="Gray" BorderThickness="2">
-                Вписать
+                Р’РїРёСЃР°С‚СЊ
             </Button>
             <Button x:Name="BTTN_OK_2" Grid.Row="3" Grid.Column="1" 
                     HorizontalAlignment="Center" Margin="150.2,0,149.8,3.8" 
                 FontSize="14" FontWeight="Bold" Padding="4,2" VerticalAlignment="Bottom">
-                Вписать
+                Р’РїРёСЃР°С‚СЊ
             </Button>
-             Таблица очков 
+            <!-- РўР°Р±Р»РёС†Р° РѕС‡РєРѕРІ -->
             <Grid Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
@@ -108,39 +108,39 @@
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"> В ряду/столбце</TextBlock>
-                <TextBlock Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"> По диагонали</TextBlock>
-                <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center"> 2 одинаковых числа</TextBlock>
-                <TextBlock Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center"> 10 очков</TextBlock>
-                <TextBlock Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center"> 20 очков</TextBlock>
-                <TextBlock Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center"> 3 одинаковых числа</TextBlock>
-                <TextBlock Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center"> 40 очков</TextBlock>
-                <TextBlock Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center"> 50 очков</TextBlock>
-                <TextBlock Grid.Row="3" Grid.Column="0" HorizontalAlignment="Center"> 4 одинаковых числа</TextBlock>
-                <TextBlock Grid.Row="3" Grid.Column="1" HorizontalAlignment="Center"> 160 очков</TextBlock>
-                <TextBlock Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center"> 170 очков</TextBlock>
-                <TextBlock Grid.Row="4" Grid.Column="0" HorizontalAlignment="Center"> 2 пары одинаковых чисел</TextBlock>
-                <TextBlock Grid.Row="4" Grid.Column="1" HorizontalAlignment="Center"> 20 очков</TextBlock>
-                <TextBlock Grid.Row="4" Grid.Column="2" HorizontalAlignment="Center"> 30 очков</TextBlock>
-                <TextBlock Grid.Row="5" Grid.Column="0" HorizontalAlignment="Center" TextWrapping="Wrap"> 3 одинаковых числа + 2 одинаковых числа</TextBlock>
-                <TextBlock Grid.Row="5" Grid.Column="1" HorizontalAlignment="Center"> 80 очков</TextBlock>
-                <TextBlock Grid.Row="5" Grid.Column="2" HorizontalAlignment="Center"> 90 очков</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"> Р’ СЂСЏРґСѓ/СЃС‚РѕР»Р±С†Рµ</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"> РџРѕ РґРёР°РіРѕРЅР°Р»Рё</TextBlock>
+                <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center"> 2 РѕРґРёРЅР°РєРѕРІС‹С… С‡РёСЃР»Р°</TextBlock>
+                <TextBlock Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center"> 10 РѕС‡РєРѕРІ</TextBlock>
+                <TextBlock Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center"> 20 РѕС‡РєРѕРІ</TextBlock>
+                <TextBlock Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center"> 3 РѕРґРёРЅР°РєРѕРІС‹С… С‡РёСЃР»Р°</TextBlock>
+                <TextBlock Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center"> 40 РѕС‡РєРѕРІ</TextBlock>
+                <TextBlock Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center"> 50 РѕС‡РєРѕРІ</TextBlock>
+                <TextBlock Grid.Row="3" Grid.Column="0" HorizontalAlignment="Center"> 4 РѕРґРёРЅР°РєРѕРІС‹С… С‡РёСЃР»Р°</TextBlock>
+                <TextBlock Grid.Row="3" Grid.Column="1" HorizontalAlignment="Center"> 160 РѕС‡РєРѕРІ</TextBlock>
+                <TextBlock Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center"> 170 РѕС‡РєРѕРІ</TextBlock>
+                <TextBlock Grid.Row="4" Grid.Column="0" HorizontalAlignment="Center"> 2 РїР°СЂС‹ РѕРґРёРЅР°РєРѕРІС‹С… С‡РёСЃРµР»</TextBlock>
+                <TextBlock Grid.Row="4" Grid.Column="1" HorizontalAlignment="Center"> 20 РѕС‡РєРѕРІ</TextBlock>
+                <TextBlock Grid.Row="4" Grid.Column="2" HorizontalAlignment="Center"> 30 РѕС‡РєРѕРІ</TextBlock>
+                <TextBlock Grid.Row="5" Grid.Column="0" HorizontalAlignment="Center" TextWrapping="Wrap"> 3 РѕРґРёРЅР°РєРѕРІС‹С… С‡РёСЃР»Р° + 2 РѕРґРёРЅР°РєРѕРІС‹С… С‡РёСЃР»Р°</TextBlock>
+                <TextBlock Grid.Row="5" Grid.Column="1" HorizontalAlignment="Center"> 80 РѕС‡РєРѕРІ</TextBlock>
+                <TextBlock Grid.Row="5" Grid.Column="2" HorizontalAlignment="Center"> 90 РѕС‡РєРѕРІ</TextBlock>
                 <TextBlock Grid.Row="6" Grid.Column="0" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center"> 
-                    5 последовательных чисел (не обязательно по порядку)
+                    5 РїРѕСЃР»РµРґРѕРІР°С‚РµР»СЊРЅС‹С… С‡РёСЃРµР» (РЅРµ РѕР±СЏР·Р°С‚РµР»СЊРЅРѕ РїРѕ РїРѕСЂСЏРґРєСѓ)
                 </TextBlock>
-                <TextBlock Grid.Row="6" Grid.Column="1" HorizontalAlignment="Center"> 50 очков</TextBlock>
-                <TextBlock Grid.Row="6" Grid.Column="2" HorizontalAlignment="Center"> 60 очков</TextBlock>
+                <TextBlock Grid.Row="6" Grid.Column="1" HorizontalAlignment="Center"> 50 РѕС‡РєРѕРІ</TextBlock>
+                <TextBlock Grid.Row="6" Grid.Column="2" HorizontalAlignment="Center"> 60 РѕС‡РєРѕРІ</TextBlock>
                 <TextBlock Grid.Row="7" Grid.Column="0" HorizontalAlignment="Center" TextWrapping="Wrap">
-                    "1", "10", "11", "12", "13" (не обязательно по порядку)
+                    "1", "10", "11", "12", "13" (РЅРµ РѕР±СЏР·Р°С‚РµР»СЊРЅРѕ РїРѕ РїРѕСЂСЏРґРєСѓ)
                 </TextBlock>
-                <TextBlock Grid.Row="7" Grid.Column="1" HorizontalAlignment="Center"> 150 очков</TextBlock>
-                <TextBlock Grid.Row="7" Grid.Column="2" HorizontalAlignment="Center"> 160 очков</TextBlock>
-                <TextBlock Grid.Row="8" Grid.Column="0" HorizontalAlignment="Center"> 4 единицы</TextBlock>
-                <TextBlock Grid.Row="8" Grid.Column="1" HorizontalAlignment="Center"> 200 очков</TextBlock>
-                <TextBlock Grid.Row="8" Grid.Column="2" HorizontalAlignment="Center"> 210 очков</TextBlock>
+                <TextBlock Grid.Row="7" Grid.Column="1" HorizontalAlignment="Center"> 150 РѕС‡РєРѕРІ</TextBlock>
+                <TextBlock Grid.Row="7" Grid.Column="2" HorizontalAlignment="Center"> 160 РѕС‡РєРѕРІ</TextBlock>
+                <TextBlock Grid.Row="8" Grid.Column="0" HorizontalAlignment="Center"> 4 РµРґРёРЅРёС†С‹</TextBlock>
+                <TextBlock Grid.Row="8" Grid.Column="1" HorizontalAlignment="Center"> 200 РѕС‡РєРѕРІ</TextBlock>
+                <TextBlock Grid.Row="8" Grid.Column="2" HorizontalAlignment="Center"> 210 РѕС‡РєРѕРІ</TextBlock>
             </Grid>
             <Button x:Name="BTTN_Return" Grid.Row="5" Grid.ColumnSpan="2" 
-            	HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="341,0,340.8,0.4" MinWidth="55" MinHeight="22" MaxWidth="150" MaxHeight="100" Content="Выйти"/>
+            	HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="341,0,340.8,0.4" MinWidth="55" MinHeight="22" MaxWidth="150" MaxHeight="100" Content="Р’С‹Р№С‚Рё"/>
         </Grid>
     </ScrollViewer>
 </Window>
