--- a/IPY_proj/MainWindow.xaml
+++ b/IPY_proj/MainWindow.xaml
@@ -2,6 +2,21 @@
        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
        Title="Matematiko" MinHeight="450" MinWidth="525" Background="#FFFBFF9A" BorderThickness="0">
+    <Window.Resources>
+        <!-- Стиль кнопок -->
+        <Style TargetType="Button">
+            <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+            <Setter Property="VerticalAlignment" Value="Center"></Setter>
+            <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
+            <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
+            <Setter Property="FontSize" Value="24"></Setter>
+            <Setter Property="Margin" Value="6"></Setter>
+            <Setter Property="Padding" Value="6,4"></Setter>
+            <Setter Property="Background" Value="#FFF9EE82"></Setter>
+            <Setter Property="BorderThickness" Value="3"></Setter>
+            <Setter Property="FontFamily" Value="TruthCYR Medium"></Setter>
+        </Style>
+    </Window.Resources>
     <StackPanel VerticalAlignment="Center" Background="#FFFBFF9A">
         <Button x:Name="button_new_game">Новая игра</Button>
         <StackPanel>
